# docling-system

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  SYSTEM_PLAN.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: architecture-governance.yml  release-gate-parity.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_document_run_cleanup_index.py  0003_document_tables.py  0004_yaml_artifacts.py  0005_validation_gate_fields.py  0006_table_hardening_fields.py  0007_document_figures.py  0008_run_evaluations.py  0009_run_failure_artifacts.py  0010_search_request_history.py  0011_search_feedback_replays.py  0012_harness_chat_feedback.py  0013_agent_task_substrate.py  0014_agent_task_verifications.py  0015_agent_task_rejections.py  0016_agent_task_learning.py  0017_agent_task_outcome_dedup.py  0018_agent_task_attempt_analytics.py  0019_search_replay_source_type.py  0020_ingest_batches.py  0021_agent_task_dependency_kind.py  0022_api_idempotency_keys.py  0023_document_metadata_textsearch.py  0024_semantic_pass_foundation.py  0025_semantic_categories.py  0026_semantic_continuity_reviews.py  0027_portable_ontology_snapshots.py  0028_semantic_graph_memory.py  0029_search_harness_evaluations.py  0030_perf_indexes.py  0031_eval_failure_cases.py  0032_knowledge_operator_runs.py  0033_evidence_package_exports.py  0034_evidence_manifests.py  0035_evidence_trace_graph.py  0036_retrieval_evidence_spans.py  0037_search_harness_releases.py  0038_audit_bundle_exports.py  0039_audit_bundle_immutability.py  0040_span_multivectors.py  (+36 more)
app/: __init__.py  agent_task_cli.py  agent_trace_review.py  architecture_contract_catalog.py  architecture_decisions.py  architecture_inspection.py  architecture_inspection_measurements.py  architecture_inspection_policy.py  architecture_inspection_rule_config.py  architecture_inspection_rule_contracts.py  architecture_inspection_rules.py  architecture_inspection_types.py  architecture_measurement_cli.py  architecture_measurement_contracts.py  architecture_measurements.py  architecture_quality.py  architecture_quality_contracts.py  architecture_quality_hotspots.py  architecture_quality_support.py  capability_contracts.py  claim_support_replay_cli.py  cli.py  hotspot_prevention.py  hotspot_prevention_claim_support_rules.py  hotspot_prevention_classifier.py  hotspot_prevention_classifier_agent_task_runtime_rules.py  hotspot_prevention_classifier_boundary_rules.py  hotspot_prevention_classifier_owner_rules.py  hotspot_prevention_classifier_schema_facades.py  hotspot_prevention_classifier_search_rules.py  hotspot_prevention_classifier_service_rules.py  hotspot_prevention_classifier_support.py  hotspot_prevention_diff.py  hotspot_prevention_policy.py  hygiene.py  hygiene_ruff.py  hygiene_types.py  improvement_case_intake_cli.py  improvement_case_lifecycle_cli.py  maintenance.py  (+3 more)
app/api/: capabilities.py  deps.py  errors.py  file_delivery.py  main.py  route_contracts.py
app/cli_commands/: __init__.py  common.py  improvement_cases.py  ingest.py  readiness.py  runtime.py  search_harness.py  search_harness_audit.py  search_harness_evaluations.py  search_harness_learning.py  search_harness_support.py  service_forwarders.py
app/core/: coercion.py  config.py  files.py  hashes.py  json_utils.py  logging.py  text.py  time.py
app/db/: _model_enums.py  models.py  session.py
app/schemas/: agent_task_claim_support.py  agent_task_core.py  agent_task_reports.py  agent_task_search_workflows.py  agent_task_semantic_generation.py  agent_task_semantic_graph.py  agent_task_semantics.py  agent_tasks.py  architecture_governance.py  chat.py  chunks.py  documents.py  eval_workbench.py  evaluations.py  figures.py  ingest_batches.py  quality.py  search.py  search_core.py  search_explanations.py  search_harness.py  search_history.py  tables.py  (+4 more)
config/: architecture_inspection.yaml  db_model_import_policy.yaml  hotspot_prevention.yaml  hygiene_policy.yaml  improvement_cases.yaml  production_trap_set_centrality_budget.yaml  ruff_baseline.yaml  semantic_registry.yaml  table_supplements.yaml  upper_ontology.yaml  vulture_whitelist.py
docs/: SESSION_HANDOFF.md  agent_task_context_residual_successor_split_milestone_plan.md  agent_task_model_domain_milestone_plan.md  agent_task_orchestration_boundary_milestone_plan.md  agent_task_residual_owner_family_milestone_plan.md  agent_task_runtime_and_verification_boundary_milestone_plan.md  agent_task_schema_aggregation_boundary_milestone_plan.md  agent_tasks_api_lifecycle_boundary_milestone_plan.md  agent_tasks_route_surface_boundary_milestone_plan.md  agentic_architecture_index.md  agentic_architecture_milestone_audit.md  agentic_architecture_milestone_plan.md  app_large_owner_modules_resolution_milestone_plan.md  architecture_boundaries.md  architecture_contract_map.json  architecture_decision_map.json  architecture_decisions.yaml  architecture_governance_cycle_boundary_milestone_plan.md  architecture_inspection_test_surface_boundary_milestone_plan.md  architecture_plan_01.md  audit_and_evidence_model_domain_milestone_plan.md  audit_bundle_and_retrieval_learning_hotspots_milestone_plan.md  boring_change_architecture_milestone_plan.md  capability_contract_map.json  ci_release_gate_parity_milestone_plan.md  claim_support_judge_integration_residual_milestone_plan.md  claim_support_model_domain_milestone_plan.md  claim_support_policy_impacts_boundary_milestone_plan.md  claim_support_residual_owner_family_milestone_plan.md  cli_command_dispatch_boundary_milestone_plan.md  closeout_state_queue_alignment_milestone_plan.md  court_grade_readiness_db_blockers_resolution_milestone_plan.md  cross_cutting_large_file_residual_milestone_plan.md  cross_cutting_verification_roots_milestone_plan.md  data_model_boundary_plan.md  db_models_caller_migration_boundary_milestone_plan.md  db_models_compatibility_facade_milestone_plan.md  db_models_residual_owner_family_milestone_plan.md  documents_api_route_surface_boundary_milestone_plan.md  documents_service_boundary_milestone_plan.md  (+69 more)
tests/: db_model_contract.py
(+796 files in other folders)
