[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "docling-system"
version = "0.1.0"
description = "Docling-based PDF ingestion and retrieval system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.16.0",
  "docling>=2.46.0",
  "fastapi>=0.118.0",
  "openai>=2.2.0",
  "pgvector>=0.4.1",
  "psycopg[binary]>=3.2.0",
  "pydantic-settings>=2.11.0",
  "python-multipart>=0.0.20",
  "sqlalchemy>=2.0.43",
  "structlog>=25.4.0",
  "uvicorn[standard]>=0.37.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.1",
  "pytest>=8.4.2",
  "pytest-asyncio>=1.2.0",
  "pytest-cov>=7.0.0",
  "respx>=0.22.0",
]

[project.scripts]
docling-system-api = "app.api.main:run"
docling-system-worker = "app.workers.poller:run"
docling-system-cleanup = "app.maintenance:run_cleanup"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
