[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "docling-system"
version = "0.1.0"
description = "Docling-based PDF ingestion and retrieval system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.16.0",
  "openai>=2.2.0",
  "pgvector>=0.4.1",
  "pydantic>=2.12.5",
  "pydantic-settings>=2.11.0",
  "psycopg[binary]>=3.2.0",
  "pyyaml>=6.0.3",
  "sqlalchemy>=2.0.43",
  "structlog>=25.4.0",
  "tiktoken>=0.12.0",
]

[project.optional-dependencies]
api = [
  "fastapi>=0.118.0",
  "python-multipart>=0.0.20",
  "uvicorn[standard]>=0.37.0",
]
ingest = [
  "docling>=2.46.0",
  "pypdfium2>=5.7.0",
]
dev = [
  "docling>=2.46.0",
  "fastapi>=0.118.0",
  "httpx>=0.28.1",
  "pypdfium2>=5.7.0",
  "pytest>=8.4.2",
  "pytest-asyncio>=1.2.0",
  "pytest-cov>=7.0.0",
  "python-multipart>=0.0.20",
  "respx>=0.22.0",
  "uvicorn[standard]>=0.37.0",
  "vulture>=2.14",
]

[project.scripts]
docling-system-api = "app.api.main:run"
docling-system-worker = "app.workers.poller:run"
docling-system-agent-worker = "app.workers.agent_poller:run"
docling-system-cleanup = "app.maintenance:run_cleanup"
docling-system-ingest-file = "app.cli:run_ingest_file"
docling-system-ingest-dir = "app.cli:run_ingest_dir"
docling-system-ingest-batch-list = "app.cli:run_ingest_batch_list"
docling-system-ingest-batch-show = "app.cli:run_ingest_batch_show"
docling-system-eval-run = "app.cli:run_eval_run"
docling-system-eval-corpus = "app.cli:run_eval_corpus"
docling-system-audit = "app.cli:run_audit"
docling-system-backfill-legacy-audit = "app.cli:run_backfill_legacy_audit"
docling-system-semantic-backfill-status = "app.cli:run_semantic_backfill_status"
docling-system-semantic-backfill = "app.cli:run_semantic_backfill"
docling-system-replay-search = "app.cli:run_replay_search"
docling-system-eval-candidates = "app.cli:run_eval_candidates"
docling-system-run-replay-suite = "app.cli:run_replay_suite"
docling-system-eval-reranker = "app.cli:run_eval_reranker"
docling-system-search-harness-evaluation-list = "app.cli:run_search_harness_evaluation_list"
docling-system-search-harness-evaluation-show = "app.cli:run_search_harness_evaluation_show"
docling-system-gate-search-harness-release = "app.cli:run_gate_search_harness_release"
docling-system-optimize-search-harness = "app.cli:run_optimize_search_harness"
docling-system-export-ranking-dataset = "app.cli:run_export_ranking_dataset"
docling-system-agent-task-actions = "app.cli:run_agent_task_actions"
docling-system-agent-task-create = "app.cli:run_agent_task_create"
docling-system-agent-task-list = "app.cli:run_agent_task_list"
docling-system-agent-task-show = "app.cli:run_agent_task_show"
docling-system-agent-task-context = "app.cli:run_agent_task_context"
docling-system-agent-task-outcomes = "app.cli:run_agent_task_outcomes"
docling-system-agent-task-label = "app.cli:run_agent_task_label"
docling-system-agent-task-artifacts = "app.cli:run_agent_task_artifacts"
docling-system-agent-task-artifact = "app.cli:run_agent_task_artifact"
docling-system-agent-task-verifications = "app.cli:run_agent_task_verifications"
docling-system-agent-task-failure-artifact = "app.cli:run_agent_task_failure_artifact"
docling-system-agent-task-approve = "app.cli:run_agent_task_approve"
docling-system-agent-task-reject = "app.cli:run_agent_task_reject"
docling-system-agent-task-analytics = "app.cli:run_agent_task_analytics"
docling-system-agent-task-trends = "app.cli:run_agent_task_trends"
docling-system-agent-task-verification-trends = "app.cli:run_agent_task_verification_trends"
docling-system-agent-task-approval-trends = "app.cli:run_agent_task_approval_trends"
docling-system-agent-task-recommendation-summary = "app.cli:run_agent_task_recommendation_summary"
docling-system-agent-task-recommendation-trends = "app.cli:run_agent_task_recommendation_trends"
docling-system-agent-task-cost-summary = "app.cli:run_agent_task_cost_summary"
docling-system-agent-task-cost-trends = "app.cli:run_agent_task_cost_trends"
docling-system-agent-task-performance-summary = "app.cli:run_agent_task_performance_summary"
docling-system-agent-task-performance-trends = "app.cli:run_agent_task_performance_trends"
docling-system-agent-task-value-density = "app.cli:run_agent_task_value_density"
docling-system-agent-task-decision-signals = "app.cli:run_agent_task_decision_signals"
docling-system-agent-task-workflow-versions = "app.cli:run_agent_task_workflow_versions"
docling-system-agent-task-export-traces = "app.cli:run_agent_task_export_traces"
docling-system-improvement-case-validate = "app.cli:run_improvement_case_validate"
docling-system-improvement-case-list = "app.cli:run_improvement_case_list"
docling-system-improvement-case-summary = "app.cli:run_improvement_case_summary"
docling-system-improvement-case-record = "app.cli:run_improvement_case_record"
docling-system-improvement-case-import = "app.cli:run_improvement_case_import"
docling-system-improvement-case-update = "app.improvement_case_lifecycle_cli:run_update"
docling-system-capability-contracts = "app.capability_contracts:run"
docling-system-architecture-inspect = "app.architecture_inspection:run"
docling-system-architecture-measure-record = "app.architecture_measurement_cli:run_record"
docling-system-architecture-measure-summary = "app.architecture_measurement_cli:run_summary"
docling-system-hygiene-check = "app.hygiene:run"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.ruff.lint.per-file-ignores]
"app/api/main.py" = ["B008"]

[dependency-groups]
dev = [
    "ruff>=0.15.10",
    "vulture>=2.14",
]
